apps/forgejo/overlays/homelab/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: forgejo
spec:
  template:
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 30
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 30
      securityContext:
        fsGroup: 1000
      volumes:
        - name: forgejo-data
          persistentVolumeClaim:
            claimName: forgejo-longhorn-rwm
