apps/forgejo/overlays/homelab/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.191
  allocateLoadBalancerNodePorts: false
